Update release workflow to set output version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,14 +34,16 @@ jobs:
       - name: Audit signatures
         run: npm audit signatures
       - name: Release
+        id: release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release
+        run: echo "::set-output name=version::$(npx semantic-release)"
 
   deploy:
-    needs: release
     name: Deploy
+    needs: release
     runs-on: ubuntu-latest
+    if: needs.release.outputs.version != 'null'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
